generated/manifests/prod-axon/hindsight/Service-hindsight-cp-internal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 10.11.0.23
  labels:
    app.kubernetes.io/instance: hindsight-cp
    app.kubernetes.io/name: hindsight-cp
    app.kubernetes.io/service: hindsight-cp-internal
  name: hindsight-cp-internal
  namespace: ai
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: hindsight-cp
    app.kubernetes.io/name: hindsight-cp
  type: LoadBalancer
