generated/manifests/prod-axon/hindsight/Service-hindsight-cp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hindsight-cp
    app.kubernetes.io/name: hindsight-cp
    app.kubernetes.io/service: hindsight-cp
  name: hindsight-cp
  namespace: ai
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: hindsight-cp
    app.kubernetes.io/name: hindsight-cp
  type: ClusterIP
