generated/manifests/prod-axon/hindsight/Service-hindsight-internal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 10.11.0.20
  labels:
    app.kubernetes.io/instance: hindsight
    app.kubernetes.io/name: hindsight
    app.kubernetes.io/service: hindsight-internal
  name: hindsight-internal
  namespace: ai
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: hindsight
    app.kubernetes.io/name: hindsight
  type: LoadBalancer
