generated/manifests/prod-axon/hindsight/CiliumNetworkPolicy-allow-lan-ingress-hindsight.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-lan-ingress-hindsight
  namespace: ai
spec:
  description: Allow private-LAN clients to reach hindsight on 8888 over the internal LoadBalancer.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hindsight
  ingress:
    - fromCIDR:
        - 10.0.0.0/8
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
