generated/manifests/prod-axon/hindsight/CiliumNetworkPolicy-allow-metrics-ingress-hindsight.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-ingress-hindsight
  namespace: ai
spec:
  description: Allow Prometheus to scrape hindsight (8888).
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hindsight
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
